@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-06-19T08:13:20Z",
-  "count_outdated" : 343,
-  "uniques_outdated" : 184,
+  "timestamp" : "2022-06-19T16:13:59Z",
+  "count_outdated" : 344,
+  "uniques_outdated" : 185,
   "count" : 373,
   "uniques" : 202,
   "clones" : [
-    {
-      "timestamp": "2022-06-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-06-06T00:00:00Z",
       "count": 3,
